# agent-chat-platform

./: .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  HANDOVER.md  README.md  fly.toml  go.work  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
deploy/: fly-deploy.sh
deploy/k8s/: README.md
deploy/temporal/: fly.toml
docs/: BACKLOG.md  DESKTOP.md  api.md  oss-build-accelerators.md  treasury-setup.md
docs/architecture/: scaling.md
docs/integrations/: browser-qa.md  cloud-integrations.md  cloudflare-logpush.md  github-app.md  google-sso.md  mcp-catalog.md
docs/plans/: 2026-06-03-plan-1-fusion-engine.md  2026-06-03-plan-2.0a-chat-tasks-backend.md  2026-06-03-plan-2.0b-web-ui.md  2026-06-03-plan-2.1a-navigation.md  2026-06-04-plan-10-honeycomb-otel.md  2026-06-04-plan-11-reload-ui.md  2026-06-04-plan-12-landing.md  2026-06-04-plan-13-memory.md  2026-06-04-plan-13b-context-explorer.md  2026-06-04-plan-14-security-hardening.md  2026-06-04-plan-15-ci-fix-on-red.md  2026-06-04-plan-16-approvals.md  2026-06-04-plan-17-task-handoff.md  2026-06-04-plan-18-diff-viewer.md  2026-06-04-plan-19-pr-comment-sync.md  2026-06-04-plan-2.1b-breadth.md  2026-06-04-plan-2.1c-dms.md  2026-06-04-plan-2.2a-auth.md  2026-06-04-plan-2.2b-rbac.md  2026-06-04-plan-2.2c-auth-lockdown.md  2026-06-04-plan-20-security-hardening-ii.md  (+64 more)
services/desktop/src-tauri/: Cargo.toml  tauri.conf.json
services/desktop/src-tauri/capabilities/: default.json
services/desktop/src-tauri/icons/: icon.icns
services/desktop/src-tauri/src/: main.rs
(+594 files in other folders)
