[package]
name = "convene-desktop"
version = "0.1.0"
description = "Convene desktop shell (Tauri) — wraps the web app with native windowing + sign-in handoff."
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# By default Tauri runs in production mode. Enable custom-protocol for release builds.
custom-protocol = ["tauri/custom-protocol"]
